# serializer version: 1
# name: test_compose_features[private]
  '''
  services:
    PKFire:
      build: .
      restart: unless-stopped
  
  '''
# ---
# name: test_compose_features[public]
  '''
  services:
    PKFire:
      image: ghcr.io/ness/PKFire:latest
      restart: unless-stopped
  
  '''
# ---
